--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <h1>ЧЕРНОВИК</h1>
     </main>
     <footer>footer</footer>
-    <script type="module" src="./js/task-1.js"></script>
-    <script type="module" src="./js/task-2.js"></script>
-    <script type="module" src="./js/task-3.js"></script>
+    <script type="module" src="./js/level-1.js"></script>
+    <script type="module" src="./js/level-2.js"></script>
+    <script type="module" src="./js/level-3.js"></script>
   </body>
 </html>
