tasks completed up to 1.6

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <header>header</header>
+    <header></header>
     <main>
-      <h1>ЧЕРНОВИК</h1>
+      <h1>Задачник</h1>
     </main>
-    <footer>footer</footer>
+    <footer></footer>
     <script type="module" src="./js/level-1.js"></script>
     <script type="module" src="./js/level-2.js"></script>
     <script type="module" src="./js/level-3.js"></script>
