--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,8 +11,10 @@
       <h1>Задачник</h1>
     </main>
     <footer></footer>
+
     <script type="module" src="./js/level-1.js"></script>
     <script type="module" src="./js/level-2.js"></script>
     <script type="module" src="./js/level-3.js"></script>
+    <script type="module" src="./js/module-1-1.js"></script>
   </body>
 </html>
