--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script type="module" src="./js/level-2.js"></script>
     <script type="module" src="./js/level-3.js"></script>
     <script type="module" src="./js/module-1-1.js"></script>
+    <script type="module" src="./js/module-1-2.js"></script>
   </body>
 </html>
