--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script type="module" src="./js/level-3.js"></script>
     <script type="module" src="./js/module-1-1.js"></script>
     <script type="module" src="./js/module-1-2.js"></script>
+    <script type="module" src="./js/module-2-1.js"></script>
   </body>
 </html>
