--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
     <script type="module" src="./js/level-1.js"></script>
     <script type="module" src="./js/level-2.js"></script>
     <script type="module" src="./js/level-3.js"></script>
+    <script type="module" src="./js/level-4.js"></script>
+    <script type="module" src="./js/level-5.js"></script>
+    <script type="module" src="./js/level-6.js"></script>
+    <script type="module" src="./js/level-7.js"></script>
+    <script type="module" src="./js/level-8.js"></script>
+    <script type="module" src="./js/level-9.js"></script>
+    <script type="module" src="./js/level-10.js"></script>
     <script type="module" src="./js/module-1-1.js"></script>
     <script type="module" src="./js/module-1-2.js"></script>
     <script type="module" src="./js/module-2-1.js"></script>
+    <script type="module" src="./js/module-2-2.js"></script>
+    <script type="module" src="./js/module-3-1.js"></script>
+    <script type="module" src="./js/module-3-2.js"></script>
+    <script type="module" src="./js/module-4-1.js"></script>
+    <script type="module" src="./js/module-4-2.js"></script>
+    <script type="module" src="./js/module-5-1.js"></script>
+    <script type="module" src="./js/module-5-2.js"></script>
+    <script type="module" src="./js/module-6-1.js"></script>
+    <script type="module" src="./js/module-6-2.js"></script>
   </body>
 </html>
